--- a/src/pages/propositions/toolbar/styles.scss
+++ b/src/pages/propositions/toolbar/styles.scss
@@ -4,7 +4,7 @@
 @import 'styles/mixins/text-styles.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 @import 'styles/animations/slide-in-top.scss';
-@import 'styles/animations/slide-out-right.scss';
+@import 'styles/animations/slide-out-bottom.scss';
 
 .propositions-toolbar {
   position: absolute;
@@ -21,7 +21,7 @@
   @include slide-in-top();
 
   &_closing {
-    @include slide-out-right();
+    @include slide-out-bottom();
   }
 
   &__list {
