ts-108: rename TruthTableForm

--- a/src/pages/truth-tables/components/form/styles.scss
+++ b/src/pages/truth-tables/components/form/styles.scss
@@ -1,8 +1,6 @@
 @import 'styles/variables/sizes.scss';
 
-.truth-table-input {
-  padding: $default-padding;
-
+.truth-table-form {
   &__input {
     margin: $big-padding 0;
   }
