--- a/src/pages/truth-tables/styles.scss
+++ b/src/pages/truth-tables/styles.scss
@@ -7,13 +7,21 @@
   gap: $big-padding;
 
   &_form {
-    width: 50%;
     display: flex;
-    flex-direction: column;
     gap: $big-padding;
+    align-items: center;
+
+    .text-input {
+      flex: 1 1 auto;
+    }
 
     .formula-preview {
       margin-bottom: 0;
+      flex: 1 1 auto;
+    }
+
+    .button {
+      flex: 0 0 8rem;
     }
   }
 }
