ts-110: replace truth table components

--- a/src/pages/propositions/sub-pages/truth-tables/styles.scss
+++ b/src/pages/propositions/sub-pages/truth-tables/styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/variables/colors.scss';
-@import 'styles/variables/sizes.scss';
+@import 'styles/variables/colors';
+@import 'styles/variables/sizes';
 
 .truth-tables {
   display: flex;
