--- a/src/pages/propositions/sub-pages/truth-tables/styles.scss
+++ b/src/pages/propositions/sub-pages/truth-tables/styles.scss
@@ -1,23 +1,5 @@
-@import 'styles/variables/colors';
-@import 'styles/variables/sizes';
+@import 'styles/mixins/page-styles.scss';
 
 .truth-tables {
-  display: flex;
-  flex-direction: column;
-  gap: $big-padding;
-
-  &_form {
-    display: flex;
-    gap: $big-padding;
-    flex-direction: column;
-
-    .form_buttons {
-      display: flex;
-      gap: $big-padding;
-
-      .button {
-        flex: 1 1 50%;
-      }
-    }
-  }
+  @include propositions-proofs-editor-styles();
 }
