--- a/src/components/controls/text-input/styles.scss
+++ b/src/components/controls/text-input/styles.scss
@@ -37,6 +37,12 @@
     }
   }
 
+  &__clear {
+    &_hidden {
+      display: none;
+    }
+  }
+
   // Dark colors
   &_dark {
     box-shadow: $dark-button-shadow;
