--- a/src/pages/propositions/sub-pages/truth-tables/styles.scss
+++ b/src/pages/propositions/sub-pages/truth-tables/styles.scss
@@ -1,5 +1,13 @@
 @import 'styles/mixins/page-styles.scss';
+@import 'styles/variables/sizes.scss';
 
 .truth-tables {
   @include propositions-proofs-editor-styles();
+
+  &_operands {
+    margin-top: $big-margin;
+    .table__cell {
+      width: 4rem;
+    }
+  }
 }
