ts-114: add styles to the laws tab

--- a/src/pages/propositions/sub-pages/truth-tables/styles.scss
+++ b/src/pages/propositions/sub-pages/truth-tables/styles.scss
@@ -10,4 +10,12 @@
       width: 4rem;
     }
   }
+
+  &_laws {
+    margin: $big-margin 0;
+
+    li {
+      margin: $big-margin 0;
+    }
+  }
 }
